@@ -252,3 +252,4 @@ v0.9.4
 v0.9.5
 
 * builder_linux: simple scripts to build static linux bins for any supported architecture
+* zapret-auto:  incompatible change.  cond_code  "code" parameter => "cond_code". to avoid collision with luaexec
